--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mekar",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://localhost/mekar",
   "dependencies": {
     "@ashvin27/react-datatable": "^1.5.3",
     "@testing-library/jest-dom": "^5.11.10",
